--- a/productscard/src/main/res/values/dimen.xml
+++ b/productscard/src/main/res/values/dimen.xml
@@ -5,4 +5,5 @@
     <dimen name="product_item_padding_bottom">8dp</dimen>
     <dimen name="product_item_text_padding">8dp</dimen>
     <dimen name="product_item_border">1dp</dimen>
+    <dimen name="pay_button_height">50dp</dimen>
 </resources>
